--- a/src/jsconfig.json
+++ b/src/jsconfig.json
@@ -1,8 +1,5 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "paths": {
-            "@/*": ["./src/*"]
-          }
+        "experimentalDecorators": true
     }
 }
