--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "camelcase": "^6.2.1",
         "case-sensitive-paths-webpack-plugin": "^2.4.0",
         "classnames": "^2.3.2",
+        "craco": "^0.0.3",
         "css-loader": "^6.5.1",
         "css-minimizer-webpack-plugin": "^3.2.0",
         "dotenv": "^10.0.0",
@@ -97,7 +98,7 @@
     },
     "scripts": {
         "start": "NODE_ENV=development BABEL_ENV=development  node scripts/start.js",
-        "build": "react-scripts --max_old_space_size=12000 build",
+        "build": "NODE_ENV=production craco build",
         "lint": "eslint .",
         "lint:fix": "eslint --fix .",
         "format": "prettier --write \"**/*.{js,jsx,json,md,html,css,less,scss}\"",
